use anyhow::Context;
use penumbra_proto::{penumbra::core::component::chain::v1alpha1 as pb, DomainType, TypeUrl};
use serde::{Deserialize, Serialize};

use crate::params::ChainParameters;

#[derive(Deserialize, Serialize, Debug, Clone, Default)]
#[serde(try_from = "pb::GenesisContent", into = "pb::GenesisContent")]
pub struct Content {
    /// The initial configuration parameters for the chain component.
    pub chain_params: ChainParameters,
}

impl From<Content> for pb::GenesisContent {
    fn from(value: Content) -> Self {
        pb::GenesisContent {
            chain_params: Some(value.chain_params.into()),
        }
    }
}

impl TryFrom<pb::GenesisContent> for Content {
    type Error = anyhow::Error;

    fn try_from(msg: pb::GenesisContent) -> Result<Self, Self::Error> {
        Ok(Content {
            chain_params: msg
                .chain_params
                .context("chain params not present in protobuf message")?
                .try_into()?,
        })
    }
}

impl TypeUrl for Content {
    const TYPE_URL: &'static str = "/penumbra.chain.v1alpha1.GenesisContent";
}

impl DomainType for Content {
    type Proto = pb::GenesisContent;
}
